Revision history for {{$dist->name}}

{{$NEXT}}

0.08 2010-03-13 07:41:31

    - Replace MakeMaker with OverridableMakeMaker

0.07 2010-03-12 22:37:51

    - Correctly declare dependencies for this module

    - Flesh out POD documentation for the module.

0.06 2010-03-12 20:11:40

    - Use my shiny new VersionFromPrev plugin to manage releases

0.05 2010-03-12 18:45:40

    - Silly error in previous releases broke all Git stuff

0.04 2010-03-12 18:43:57

    - Test CPAN release

0.03 2010-03-12 18:42:57

    - Another shot at making Git work, now with
      Dist::Zilla::PluginBundle::Git

0.02 2010-03-12 18:37:30

    - Also use Git::Commit in my configuration

0.01 2010-03-12 18:35:44

    - Forked from The Dist::Zilla::PluginBundle::RJBS with settings
      AVAR likes