@@ -2,6 +2,9 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+    - Support a bugtracker option for setting github, rt or any other
+      trackers in META.*
+
 0.08 2010-03-13 07:41:31
 
     - Replace MakeMaker with OverridableMakeMaker
